--- a/leaflet/weather/index.html
+++ b/leaflet/weather/index.html
@@ -10,7 +10,7 @@
     <div id="weathermap"></div>
 
     <script src="leaflet.js"></script>
-    <script src="http://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="weather.js"></script>
   </body>
 </html>
