--- a/leaflet/weather/index.html
+++ b/leaflet/weather/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> name o map</title>
-    <link rel="stylesheet" href="leaflet.css" >
+    <link href="leaflet.css" rel="stylesheet">
     <link href="weather.css" rel="stylesheet">
   </head>
   <body>
