--- a/leaflet/earthquake/index.html
+++ b/leaflet/earthquake/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title> name o map</title>
-    <link rel="stylesheet" href="leaflet.css">
+    <link href="leaflet.css" rel="stylesheet">
     <link href="weather.css" rel="stylesheet">
   </head>
   <body>
-    <div id="weathermap"></div>
+    <div id = "quakemap"></div>
 
     <script src="leaflet.js"></script>
-    <script src="http://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="weather.js"></script>
-
-
   </body>
 </html>
