--- a/leaflet/earthquake/index.html
+++ b/leaflet/earthquake/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title> name o map</title>
-    <link href="leaflet.css" rel="stylesheet">
-    <link href="weather.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id = "quakemap"></div>
 
-    <script src="leaflet.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="weather.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>QUAKES</title>
+  <link href="leaflet.css" rel="stylesheet">
+  <link href="earthquake.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="quakemap"></div>
+
+  <script src="leaflet.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="earthquake.js"></script>
+</body>
+
 </html>
