--- a/leaflet/Bonus/index.html
+++ b/leaflet/Bonus/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>QUAKES</title>
+  <title>BONUS</title>
   <link href="leaflet.css" rel="stylesheet">
   <link href="combo.css" rel="stylesheet">
 </head>
