--- a/GoogleAPI/index.html
+++ b/GoogleAPI/index.html
@@ -6,11 +6,14 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <script src="./index.js"></script>
+  <link href="dark.css" rel="stylesheet">
+
 </head>
 
 <body>
   <script type="text/javascript" src="obj1.js"></script>
   <script type="text/javascript" src="obj2.js"></script>
+  
   <style>
     #map {
       height: 100%;
@@ -58,13 +61,14 @@
     async function initMap() {
       const { Map } = await google.maps.importLibrary("maps");
 
-      const myLatlng = { lat: 41.3114, lng: -105.5911 };
+      const myLatlng = { lat: 41.0, lng: -105.0 };
 
 
       const map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 4,
+        zoom: 5,
         center: myLatlng,
         mapId: "Hot_Spring_Weather",
+      
       });
 
       heatmap = new google.maps.visualization.HeatmapLayer({
