--- a/MidTerm/index.html
+++ b/MidTerm/index.html
@@ -51,6 +51,8 @@
   <div id="floating-panel">
     <button id="toggle-heatmap">Monarch Butterfly</button>
     <button id="toggle-heatmap2">Milkweed</button>
+    <button id="toggle-markers"> Monarch Markers</button>
+    <button id="toggle-markers2">Milkweed Markers</button>
   </div>
   <div id="map"></div>
   <script>
@@ -67,11 +69,12 @@
 
 
       });
-      AddMarkers();
-      AddMarkers2();
+      mapMarkers();
+      mapMarkers2();
+      heatmap();
 
       //markers
-      function AddMarkers() {
+      function mapMarkers() {
         const infoWindow = new google.maps.InfoWindow();
         for (var i = 0; i < bfly.length; i++) {
           var myLatlng = new google.maps.LatLng(bfly[i].lat, bfly[i].lon);
@@ -87,7 +90,6 @@
               strokeColor: 'black'
             }
           });
-
           //marker event listener
           google.maps.event.addListener(marker, 'click', (function (marker, i) {
             return function () {
@@ -97,7 +99,8 @@
           })(marker, i));
         }
       }
-      function AddMarkers2() {
+
+      function mapMarkers2() {
         const infoWindow = new google.maps.InfoWindow();
         for (var i = 0; i < bfly.length; i++) {
           var myLatlng = new google.maps.LatLng(weed[i].lat, weed[i].lon);
@@ -109,11 +112,10 @@
               scale: 7,
               fillColor: 'pink',
               fillOpacity: 1,
-              strokeWeight: 5,
+              strokeWeight: 5, 
               strokeColor: 'green'
             }
           });
-          
           google.maps.event.addListener(marker, 'click', (function (marker, i) {
             return function () {
               infoWindow.setContent(weed[i].name + "<br>" + weed[i].scientific_name + "<br>" + weed[i].place);
@@ -124,68 +126,72 @@
       }
 
       //heatmap
-      heatmap = new google.maps.visualization.HeatmapLayer({
-        data: getPoints(),
-        map: map,
-        radius: 30,
-        opacity: 0.7,
-        gradient: [
-          "rgba(255, 255, 0, 0)",
-          "rgba(255, 255, 0, 1)",
-          "rgba(255, 210, 0, 1)",
-          "rgba(255, 180, 0, 1)",
-          "rgba(255, 150, 0, 1)",
-          "rgba(255, 120, 0, 1)",
-          "rgba(255, 90, 0, 1)",
-          "rgba(255, 60, 0, 1)",
-          "rgba(255, 30, 0, 1)",
-          "rgba(255, 0, 0, 1)"
-        ]
-      });
-      var heatmap2 = new google.maps.visualization.HeatmapLayer({
-        data: getPoints2(),
-        map: map,
-        radius: 40,
-        dissapating: false,
-        gradient: [
-          "rgba(0, 255, 255, 0)",
-          "rgba(0, 255, 255, 1)",
-          "rgba(0, 191, 255, 1)",
-          "rgba(0, 127, 255, 1)",
-          "rgba(0, 63, 255, 1)",
-          "rgba(0, 0, 255, 1)",
-          "rgba(63, 0, 255, 1)",
-          "rgba(127, 0, 255, 1)",
-          "rgba(191, 0, 255, 1)",
-          "rgba(255, 0, 255, 1)",
-        ]
-      });
-      //heatmap toogle
-      document.getElementById("toggle-heatmap").addEventListener("click", toggleHeatmap);
-      document.getElementById("toggle-heatmap2").addEventListener("click", toggleHeatmap2);
-    
-      function toggleHeatmap() {
-        heatmap.setMap(heatmap.getMap() ? null : map);
-      }
-      function toggleHeatmap2() {
-        heatmap2.setMap(heatmap2.getMap() ? null : map);
-      }
-      function getPoints() {
-        var points = []
-        for (var i = 0; i < bfly.length; i++) {
-          points.push(new google.maps.LatLng(bfly[i].lat, bfly[i].lon))
+      function heatmap() {
+        heatmap = new google.maps.visualization.HeatmapLayer({
+          data: getPoints(),
+          map: map,
+          radius: 30,
+          opacity: 0.7,
+          gradient: [
+            "rgba(255, 255, 0, 0)",
+            "rgba(255, 255, 0, 1)",
+            "rgba(255, 210, 0, 1)",
+            "rgba(255, 180, 0, 1)",
+            "rgba(255, 150, 0, 1)",
+            "rgba(255, 120, 0, 1)",
+            "rgba(255, 90, 0, 1)",
+            "rgba(255, 60, 0, 1)",
+            "rgba(255, 30, 0, 1)",
+            "rgba(255, 0, 0, 1)"
+          ]
+        });
+        var heatmap2 = new google.maps.visualization.HeatmapLayer({
+          data: getPoints2(),
+          map: map,
+          radius: 40,
+          dissapating: false,
+          gradient: [
+            "rgba(0, 255, 255, 0)",
+            "rgba(0, 255, 255, 1)",
+            "rgba(0, 191, 255, 1)",
+            "rgba(0, 127, 255, 1)",
+            "rgba(0, 63, 255, 1)",
+            "rgba(0, 0, 255, 1)",
+            "rgba(63, 0, 255, 1)",
+            "rgba(127, 0, 255, 1)",
+            "rgba(191, 0, 255, 1)",
+            "rgba(255, 0, 255, 1)",
+          ]
+        });
+
+
+
+        function toggleHeatmap() {
+          heatmap.setMap(heatmap.getMap() ? null : map);
         }
-        return points
-      }
-      function getPoints2() {
-        var points = []
-        for (var i = 0; i < weed.length; i++) {
-          points.push(new google.maps.LatLng(weed[i].lat, weed[i].lon))
+        function toggleHeatmap2() {
+          heatmap2.setMap(heatmap2.getMap() ? null : map);
         }
-        return points
-      }
+        function getPoints() {
+          var points = []
+          for (var i = 0; i < bfly.length; i++) {
+            points.push(new google.maps.LatLng(bfly[i].lat, bfly[i].lon))
+          }
+          return points
+        }
+        function getPoints2() {
+          var points = []
+          for (var i = 0; i < weed.length; i++) {
+            points.push(new google.maps.LatLng(weed[i].lat, weed[i].lon))
+          }
+          return points
+        }
+        //heatmap toogle
+        document.getElementById("toggle-heatmap").addEventListener("click", toggleHeatmap);
+        document.getElementById("toggle-heatmap2").addEventListener("click", toggleHeatmap2);
       }
 
+    }
   </script>
   \\\ Restrcit API Key for specific website in Google Cloud Service
   <script async
