--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -48,13 +48,13 @@
           <script src="map.js"></script>
         </div>
         <div id="checkboxes">
-          <input type="checkbox" id="toggleLayer1" />
+          <input type="checkbox" id="toggleLayer1" checked/>
           <label for="toggleLayer1">Internet</label>
-          <input type="checkbox" id="toggleLayer2" />
+          <input type="checkbox" id="toggleLayer2" checked/>
           <label for="toggleLayer2">House</label>
-          <input type="checkbox" id="toggleLayer3" />
+          <input type="checkbox" id="toggleLayer3" checked/>
           <label for="toggleLayer3">other 3</label>
-          <input type="checkbox" id="toggleLayer4" />
+          <input type="checkbox" id="toggleLayer4" checked/>
           <label for="toggleLayer4">other 4</label>
         </div>
       </td>
