--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -27,7 +27,6 @@
       left: 37%;
       background-color: white;
       padding: 10px 50px;
-
       z-index: 1;
       border-radius: 1px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
@@ -51,7 +50,7 @@
     <div style="width: 100%; text-align: left; vertical-align: middle;">
     </div>
     <div id="titlebox">
-      <h2>Income & Quality of Life</h2>
+      <h2>Income and Quality of Life</h2>
     </div>
 
     <div id="radioboxes">
@@ -75,8 +74,8 @@
       <input type="radio" name="filter" value="80" /><label> $80,000 - $90,000</label><br>
       <input type="radio" name="filter" value="90" /><label> > $90,000</label><br>
     </div>
-  </div>
 
+  </div>
   <script src="map.js"></script>
 </body>
 </html>
